# device_allwinner

./: README.en.md  README.md
drivers/: BUILD.gn  Kconfig  lite.mk
drivers/uart/: BUILD.gn  Makefile  uart_core.c  uart_dw.c  uart_dw.h  uart_v3s.c
v3s/: BUILD.gn  build.sh
v3s/config/: Makefile  hdf.hcs
v3s/config/uart/: uart_config.hcs
v3s/sdk_liteos/: BUILD.gn  config.gni  v3s_liteos_a.patch
v3s/sdk_liteos/board/: BUILD.gn  Makefile  target_config.h
v3s/sdk_liteos/board/include/: reset_shell.h
v3s/sdk_liteos/board/include/soc/: sys_ctrl.h
v3s/sdk_liteos/board/os_adapt/: os_adapt.c
v3s/sdk_liteos/config/: Kconfig
v3s/sdk_liteos/config/board/: .config  BUILD.gn  target_config.h
v3s/sdk_liteos/config/board/extcmd/: reset_shell.c
v3s/sdk_liteos/hdf_config/device_info/: device_info.hcs
