# Copyright (c) 2020 Huawei Device Co., Ltd. All rights reserved.

import("//build/lite/config/component/lite_component.gni")

#build_ext_component("v3s_make_kernel") {
#  exec_path = rebase_path("./", root_build_dir)
#  outdir = rebase_path("./out/v3s/obj/kernel/liteos_a/")
#  command = "sh ./build.sh ../../../kernel/liteos_a/ $outdir"
#}

group("v3s") {
}
